--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ h6 {
     height: 100px;
     padding: 20px 0;
     z-index: 999;
+  
 }
 
 #nav.nav-sticky {
@@ -97,10 +98,12 @@ h6 {
 #nav .navbar {
     height: 100%;
     background: transparent !important;
+   
 }
 
 #nav .navbar-brand {
     padding: 0;
+    
 }
 
 
@@ -133,7 +136,13 @@ h6 {
 #nav .nav-link.active {
     color: #ffffff;
     border-radius: 10px;
+    transition: all 0.3s step-start;
 }
+.nav-link:hover {
+    transform: scale(0.85);
+}
+
+
 
 #nav .nav-link:hover,
 #nav .nav-link.active {
@@ -147,6 +156,18 @@ h6 {
     border: 0;
     border-radius: 10px;
     background: #f8f9fa;
+}
+
+
+#nav .dropdown-menu .dropdown-item {
+    background: white; 
+    border-radius: 10px; 
+    transition: all 0.3s step-start; 
+}
+#nav .dropdown-menu .dropdown-item:hover {
+    background: #4F84C4;  
+    border-radius: 10px;
+    transform: scale(0.95); 
 }
 
 @media (min-width: 768px) {
@@ -232,12 +253,14 @@ h6 {
 .header .carousel-content .btn {
     padding: 12px 30px;
     color: #ffffff;
-    border-radius: 0;
+    border-radius: 5px;
     background: #4F84C4;
+    transition: all 0.3s ease-out;
 }
 
 .header .carousel-content .btn:hover {
     background: #888888;
+    transform: scale(1.05);
 }
 
 .carousel-control-next i,
@@ -349,12 +372,14 @@ h6 {
     letter-spacing: 1px;
     color: #ffffff;
     background: #999999;
-    border-radius: 0;
+    border-radius: 5px;
+    transition: all 0.3s ease-out;
 }
 
 .about .btn:hover,
 .single .btn:hover {
     background: #4F84C4;
+    transform: scale(1.05);
 }
 
 
@@ -452,64 +477,20 @@ h6 {
     letter-spacing: 1px;
     text-transform: uppercase;
     background: #ffffff;
-    border-radius: 0;
-    transition: 0.3s;
+    border-radius: 5px;
+    transition: all 0.3s ease-out;
 }
 
 .call-to-action .btn:hover {
     color: #ffffff;
-    background: #353535;
+    background: #7297c5;
+    transform: scale(1.05);
 }
 
 
 
 
-/**************************************/
-/*********** Our Skills CSS ***********/
-/**************************************/
-.skills {
-    position: relative;
-    padding: 90px 0 60px 0;
-}
 
-.skills .skill-item {
-    position: relative;
-    width: 100%;
-    margin-bottom: 30px;
-}
-
-.skills .skill-item h3 {
-    font-size: 22px;
-    font-weight: 700;
-    color: #666666;
-    margin-bottom: 15px;
-}
-
-.skills .skill-name {
-    position: relative;
-    width: 100%;
-}
-
-.skills .skill-name p {
-    display: inline-block;
-    margin-bottom: 5px;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-.skills .skill-name p:last-child {
-    float: right;
-}
-
-.skills .progress {
-    margin-bottom: 15px;
-    border-radius: 0;
-}
-
-.skills .progress .progress-bar {
-    background: #4F84C4;
-    border-radius: 0;
-}
 
 
 
@@ -560,6 +541,14 @@ h6 {
 .portfolio .portfolio-item {
     margin-bottom: 30px;
     overflow: hidden;
+    transition: all 0.3s ease-out;
+    
+}
+
+.portfolio .portfolio-item:hover {
+    margin-bottom: 30px;
+    overflow: hidden;
+   transform: scale(1.05);
     
 }
 
@@ -648,6 +637,7 @@ h6 {
 
 
 
+
 /**************************************/
 /************* Contact CSS ************/
 /**************************************/
@@ -689,11 +679,13 @@ h6 {
 .contact .form button[type="submit"] {
     color: #ffffff;
     background: #888888;
-    border-radius: 0;
+    border-radius: 5px;
+   transition: all 0.3s ease-out;
 }
 
 .contact .form button[type="submit"]:hover {
     background: #4F84C4;
+    transform: scale(1.05);
 }
 
 .contact .map {
@@ -794,6 +786,7 @@ h6 {
     border: 1px solid #ffffff;
     background: transparent;
     color: #ffffff;
+   
 }
 
 .footer .footer-top .footer-newsletter input[type="submit"] {
@@ -806,12 +799,14 @@ h6 {
     background: #ffffff;
     transition: 0.3s;
     cursor: pointer;
+   
 }
 
 .footer .footer-top .footer-newsletter input[type="submit"]:hover {
     color: #ffffff;
     background: #4F84C4;
     border: 1px solid #4F84C4;
+   
 }
 
 .footer .footer-top .footer-newsletter p {
